# s2orc-doc2json

./: .gitignore  pyproject.toml
doc2json/: config.py  s2orc.py
doc2json/flask/: app.py
doc2json/tex2json/: process_tex.py  tex_to_xml.py  xml_to_json.py
doc2json/utils/: citation_util.py  grobid_util.py  latex_util.py  refspan_util.py  soup_utils.py
